
version 1.1.2 -

new features:

bug fixes:


version 1.1.1 - 2020/03/23

new features:
- changed the way logging in handled.
- RNO-G hardware response added

version 1.1.0 - 2020/01/15

new features:
- added module registry. By adding a decorator to the run methods of every module, we keep track of the modules applied to an event
-Added new module called "beamFormingDirectionFitter" that fits direction through an interferometry method (dubbed beamForming)
-Added the internal clock parameter (time since last trigger with ms precision) to ARIANNA paremeters (key number 8)
-Changed import "detector_sql" to "from NuRadioReco.detector import detector_sql" and .GetSec() to datetime.datetime.fromtimestamp(self.config_tree.TrigStartClock.GetCurrTime()) in the detector.py and readARIANNAdataCalin.py files respectively in order to make it python3 compatible.
-Updated documentation and made it deployable on github
-Changed normalization of the frequency spectrum. The amplitude is now given as V/GHz (or V/m/GHz for E-fields) instead of
   V/GHz/bin. This way, the values of trace.get_frequency_spectrum() are independent of the sampling rate. The fft utilities
   now also need the sampling rate as an argument.
-Envelope phased array available
-Trigger times now include the time with respect to the first interaction (vertex times)
-Analog to digital converter module added
-Improved calculation of the diode noise parameters
-Added the ability to force polarization to be only eTheta or ePhi in the reconstruction of the electric field using voltageToEfieldConverter.py

Detector description can be stored in .nur files
Large overhaul of the event structure. Adds shower classes and hybrid detector information.

bugfixes:
-Fixes increase in filesize caused by switch to python3
-Fixed bug when using no secondary channels on the phased array
-Fixed bug when using ARA trigger

version 1.0.0 - 2019/08/30 - first python 3 release